--- a/TestASP.BlazorServer/Pages/Authentication/Signup.razor
+++ b/TestASP.BlazorServer/Pages/Authentication/Signup.razor
@@ -2,8 +2,12 @@
 
 @using TestASP.BlazorServer.Models;
 @using System.Web;
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
 
-<ValidateForm @ref="ValidateForm" Model="@SignUp" OnValidSubmit="OnSubmitClick" ValidateAllProperties="true" >
+@attribute [Microsoft.AspNetCore.Mvc.AutoValidateAntiforgeryToken]
+@inject  Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage.ProtectedSessionStorage _sessionStorage
+
+<ValidateForm @ref="ValidateForm" Model="@SignUp" OnValidSubmit="OnSubmitClick" ValidateAllProperties="true">
     <div class="container-fluid row mx-auto col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
         <BootstrapBlazorDataAnnotationsValidator />
         @*<BootstrapInput type="file" TValue="IBrowserFile" Value="@SignUp.Image" />*@
@@ -88,7 +92,7 @@
         }
         if (!signupResult.IsSuccess)
         {
-            if(!string.IsNullOrEmpty(signupResult.Error))
+            if (!string.IsNullOrEmpty(signupResult.Error))
             {
                 await _toastService.Error("Signup Error.", signupResult.Error);
                 return;
@@ -99,7 +103,7 @@
                 {
                     foreach (var fieldErrorMessages in fieldError.Value)
                     {
-                        ValidateForm.SetError(fieldError.Key,fieldErrorMessages);
+                        ValidateForm.SetError(fieldError.Key, fieldErrorMessages);
                     }
                 }
             }
@@ -107,6 +111,7 @@
             return;
         }
         await _toastService.Success("Login Success!", signupResult.Message);
+        await _sessionStorage.SetAsync("JWTToken", signupResult.Data.Token);
         _navigationManager.NavigateTo($"/authentication/loginSession?token={HttpUtility.UrlEncode(signupResult.Data.Token)}", true, true);
     }
 }
