--- a/TestASP.BlazorServer/Shared/NavMenu.razor.css
+++ b/TestASP.BlazorServer/Shared/NavMenu.razor.css
@@ -50,6 +50,19 @@
     color: white;
 }
 
+
+.sub-nav-scrollable {
+    /* Allow sidebar to scroll for tall menus */
+/*    height: calc(100vh - 3.5rem);
+    overflow-y: auto;*/
+    display: block
+}
+
+.sub-nav-scrollable.collapse {
+    /* Never collapse the sidebar for wide screens */
+    display: none;
+}
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
