--- a/TestASP.BlazorServer/Components/Bootstrap/AccordionItem.razor
+++ b/TestASP.BlazorServer/Components/Bootstrap/AccordionItem.razor
@@ -1,6 +1,8 @@
 ﻿@using System.Diagnostics.CodeAnalysis;
 @using TestASP.Common.Helpers;
 
+@namespace TestASP.BlazorServer.Components.Bootstrap
+
 @inherits BlazorComponentBase
 
 <div @attributes="@AdditionalAttributes" class="@ClassString">
